# darling-foundation

./: CMakeLists.txt  ChangeLog  README.md  config.h.in  configure  configure.ac  reexport_i386.exp
Documentation/: Base.gsdoc  news.texi
Headers/Foundation/: NSBundle.h  NSFileManager.h  NSGeometry.h  NSNotification.h  NSPropertyList.h  NSRunLoop.h  NSString.h  NSURL.h
Headers/GNUstepBase/: GNUstep.h  GSBlocks.h  GSConfig.h.in  GSObjCRuntime.h  GSTypeEncoding.h  config.h.in
Source/: GSBlocks.m  GSFFIInvocation.m  GSFileHandle.h  GSFileHandle.m  GSStream.h  GSStream.m  NSArchiver.m  NSArray.m  NSBundle.m  NSCoder.m  NSConnection.m  NSData.m  NSDictionary.m  NSDistantObject.m  NSDistributedNotificationCenter.m  NSGeometry.m  NSKeyedUnarchiver.m  NSLocalizableString.m  NSMessagePort.m  NSMethodSignature.m  NSNotificationCenter.m  NSObjCRuntime.m  NSPathUtilities.m  NSPortCoder.m  NSPredicate.m  NSProcessInfo.m  NSPropertyList.m  NSRunLoop.m  NSSocketPort.m  NSSortDescriptor.m  NSString.m  NSURL.m  NSUnarchiver.m  cifframe.m  dynamic-load.h  objc-load.m
include/Foundation/: Foundation.h  NSAffineTransform.h  NSAppleEventDescriptor.h  NSAppleEventManager.h  NSAppleScript.h  NSArchiver.h  NSArray.h  NSAutoreleasePool.h  NSAutoresizingMaskLayoutConstraint.h  NSBlockInvocation.h  NSBundle.h  NSByteCountFormatter.h  NSCache.h  NSCalendar.h  NSCalendarDate.h  NSCheapMutableString.h  NSClassDescription.h  NSComparisonPredicate.h  NSCompoundPredicate.h  NSConnection.h  NSContentSizeLayoutConstraint.h  NSData.h  NSData_Private.h  NSDate.h  NSDateComponentsFormatter.h  NSDateFormatter.h  NSDateInterval.h  NSDebug.h  NSDeprecatedKeyValueCoding.h  NSDictionary.h  NSDimension.h  NSDistantObject.h  NSDistantObjectRequest.h  NSDistributedLock.h  NSDistributedNotificationCenter.h  NSEnumerator.h  NSError.h  NSError_Private.h  NSException.h  NSExtensionContext.h  (+133 more)
internal_include/Foundation/: CFInternal.h  NSCFType.h  NSFileCoordinator+Internal.h  NSObjectInternal.h
services/filecoordinationd/: CMakeLists.txt  FileAccessRequest.h  FileAccessRequest.m  XPCObject.h  XPCObject.m  com.apple.FileCoordination.plist  daemon.h  daemon.m  logging.h  logging.m
src/: GSIMap.h  GSPrivate.h  NSAddressCheckingResult.m  NSAffineTransform.m  NSAggregateExpression.m  NSAppleEventDescriptor.m  NSAppleEventManager.m  NSAppleScript.m  NSArchiver.m  NSArray.m  NSAttributedString.m  NSAttributedStringInternal.h  NSAutoreleasePool.m  NSAutoresizingMaskLayoutConstraint.m  NSBlockExpression.m  NSBlockPredicate.m  NSBundle.m  NSByteCountFormatter.m  NSCFTSDKeys.h  NSCFType.h  NSCFType.m  NSCalendar.m  NSCalendarInternal.h  NSCallBacks.h  NSCallBacks.m  NSCheapMutableString.m  NSClassDescription.m  NSCoder.m  NSCoderInternal.h  NSComparisonPredicate.m  NSComparisonPredicateOperator.h  NSComparisonPredicateOperator.m  NSCompoundPredicate.m  NSConcreteDistantObjectRequest.h  NSConcreteDistantObjectRequest.m  NSConcreteHashTable.m  NSConcreteHashTableInternal.h  NSConcreteMapTable.m  NSConcretePortCoder.h  NSConcretePortCoder.m  (+229 more)
test/: CMakeLists.txt
test/nsxpc-launchd-service/: CMakeLists.txt  client.m  common.m  org.darlinghq.Foundation.nsxpc-test-service.plist  service.h  service.m
tools/: defaults.m
